2011-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/msdos.c (pc_partition_map_embed): Fix off by one
	error.

2011-02-11  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/20_linux_xen.in: Bail out early if linux_list is
	empty, since in that case we can only generate either nothing or a
	syntactically invalid configuration file.
	Reported by: Michal Suchanek.  Fixes Debian bug #612898.

2011-02-09  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Kernel): Add reference to grub-mkrescue.
	(Making a GRUB bootable CD-ROM): Likewise.
	(Invoking grub-mkrescue): New section.
	Reported by: Yann Dirson.  Fixes Debian bug #612585.

2011-02-09  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-install.in: Remove unnecessary brackets from tr
	arguments.
	* util/grub.d/10_hurd.in: Likewise.
	* util/grub.d/10_kfreebsd.in: Likewise.
	* util/grub.d/10_linux.in: Likewise.
	* util/grub.d/20_linux_xen.in: Likewise.
	Reported by: Jamie Heilman.  Fixes Debian bug #612564.

2011-02-08  Colin Watson  <cjwatson@ubuntu.com>

	* include/grub/file.h (not_easly_seekable): Rename to ...
	(not_easily_seekable): ... this.  Update all users.

2011-01-28  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Making a GRUB bootable CD-ROM): Update to describe
	grub-mkrescue.

2011-01-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Refuse to create the images
	bigger than the actual flash (512K) in Loongson machines. 512K is also
	the biggest chip supported by them.

2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/getroot.c: Include config-util.h explicitly.

2011-01-22  Anthony DeRobertis <anthony@derobert.net>

	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): Check
	super_offset field.

2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Ignore install device on platforms
	where it doesn't make sense. Always use UUIDs except on pc, efi and
	sparc64.